--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -655,7 +655,7 @@ the set of corresponding distributions $\mathcal{M}$ is empty.***
 ***note on IP can be frequentist / non-Bayesian (similarities to Weichselberger?),
 see \parencite[\S 5]{itip-statinf}***
 
-***short description of NPI here? as \emph{inference} approach!
+***short description of NPI here? as \emph{inference} approach! link from weighted model here?
 
 
 
@@ -1020,8 +1020,8 @@ but a fuzzy probability, expressing the uncertainty for that probability by rela
 The hierarchical model has thus close relations to approaches using fuzzy numbers and distributions,
 with the advantage of a clear interpretation of the possibility functions as likelihoods.
 Furthermore, there is a sound foundation of combination rules and deduction of inferences in probability theory
-\parencite[\S 3]{2007a:cattaneo} ***or other ref***.
-In contrast, in the fuzzy literature, the interpretation of fuzzy numbers, or membership functions,
+\parencite[\S 3]{2007a:cattaneo} ***other ref: SMPS, \textcite{2008:cattaneo}???***.
+In contrast, in the fuzzy literature, the interpretation of fuzzy numbers, or membership functions in general,
 usually explained as expressing `degrees of membership', remains often rather cloudy***.
 Also, the rules for combining different inference sources are controversially disputed,
 and the fuzzy literature disagrees on how to correctly deduce inferences from a body of evidence.}
