--- a/intro.tex
+++ b/intro.tex
@@ -1518,6 +1518,7 @@ are discussed in more detail in Sections~\ref{sec:motivation:pdc} and \ref{sec:p
 \textcite{Walter2009a}, reproduced in Section~\ref{sec:jstp}, is the publication centered around this idea.}
 
 \subsubsection{Interval for Learning Parameter}
+\label{sec:intervallearningparameter}
 
 We follow \textcite[p.~19]{1965:good} \parencite[as suggested by][Note~5.4.1, p.~524]{1991:walley},
 and reason about posterior expectations of hypothetical data to elicit $\nzl$ and $\nzu$;
