--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -205,7 +205,7 @@ the posteriors in $\MN$ will concentrate all their probability mass at $\yn \to 
 and as $\ttau(\x) \to \theta$ in probability, all these inference properties follow.}
 This property, that holds also for traditional (precise) Bayesian inferences,
 is similar to the consistency property often employed in frequentist statistics.
-\item The larger $\Delta_y(\PZ)$, the larger c.p.\ $\Delta_y(\PN)$;
+\item \label{enum:deltay}The larger $\Delta_y(\PZ)$, the larger c.p.\ $\Delta_y(\PN)$;
 %The larger the stretch in the $\yz$ dimension a priori, the larger c.p.\ the stretch of the $\yn$ values obtained a posteriori.
 a more imprecise prior $\MZ$ will naturally lead to a more imprecise posterior $\MN$, which carries over to the inferences.
 \end{enumerate}
