--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -655,7 +655,8 @@ the set of corresponding distributions $\mathcal{M}$ is empty.***
 ***note on IP can be frequentist / non-Bayesian (similarities to Weichselberger?),
 see \parencite[\S 5]{itip-statinf}***
 
-***short description of NPI here? as \emph{inference} approach! link from weighted model here?
+***short description of NPI here? as \emph{inference} approach! 
+use section in \cite{itip-statinf}? link from weighted model here?
 
 
 
