--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1185,7 +1185,7 @@ information to the real data, it is unlikely that such new methods
 can be developed within the Bayesian framework, although there may
 be opportunities if one restricts the inferences to situations where
 one has at least a pre-determined number of observations to ensure
-that posterior inferences are proper. For example, one could
+that posterior distributions are proper. For example, one could
 consider allowing the prior strength parameter
 $\nz$ in the IBBM to take on negative values, opening up a rich
 field for research and discussions.
