diss: concluding set shape anteater

--- a/concluding.tex
+++ b/concluding.tex
@@ -211,8 +211,29 @@ if $\ttau(\x) < \yzu(\nzu)$ (i.e., data is in agreement with the prior assigneme
 the effect of extra imprecision would only appear as soon as $\ynu(\nnl) > \ynu(\nnu)$.}
 
 However, it seems equally reasonable to choose $\yzu(\nzl) > \yzu(\nzu)$,
-by the following considerations: ***anteater****
+by the considerations described*** at the beginning of Section~\ref{sec:othershapes},
+involving a thought experiment, i.e., doing a pre-posterior analysis:
+%***anteater****
+If we designate bounds for $\yn$ constant in $\nn$,
+where the corresponding posterior parameter set $\PN$
+expresses what we want to learn from certain hypothetical data,
+the corresponding $\PZ$ derived by doing a `backwards update' has,
+due to the update mechanism \eqref{eq:canonicalupdate},
+a wider range for high values of $\nz$, and a narrower range for lower $\nz$ values.%
+\footnote{For this model, the pre-posterior bounds, along with the hypothetical data, have to be elicited}
+For an actual sample size smaller than the hypothetical one,
+also this shape is more `tolerant' as the retangular shape.
 
+The resulting shapes are similar to shapes that would result
+if we required, for information on the main prior parameter $\yz$ symmetrical around $0$,
+$|\nz \cdot \yz|$ to be constant.
+Such a shape was proposed by \textcite{2012:benavolizaffalon}
+for canonical priors to one-parameter exponential family likelihoods,
+with the aim to generate near-noninformative prior sets $\MZ$.
+
+
+
+***short note on eggplant shapes in talk? (preliminary results)
 
 %``somewhat peculiar'' from a behavioral point of view (Section~\ref{sec:resume}).
 
@@ -267,6 +288,8 @@ but can also be seen similar to \pdc\ (is new data in conflict with current (pri
 it might be interesting to see if rectangular sets or other shapes are good for this.  
 
 ***use regression framework from Section~\ref{sec:cccp} in situations prone to \pdc.
+
+***take only pair of $\nz$ values? behavioural implications?
 
 
 ***\textbf{then: extend the model, but keep GBR framework}
