diss: small stuff in concluding

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -1,9 +1,12 @@
 @BOOK{1739:hume,
   title = {A treatise of human nature},
-  publisher = {Everyman},
-  year = {1961},
-  author = {Hume, D.},
-  address = {London, UK}}
+  publisher = {Clarendon Press},
+  year = {2000},
+  editor = {David Norton and Mary Norton},
+  author = {Hume, David},
+  series = {The Oxford Philosophical Texts Edition of David Hume},
+  address = {Oxford, UK}}
+
 
 @book{1993:karr,
     Address = {New York},
