--- a/concluding.tex
+++ b/concluding.tex
@@ -191,7 +191,7 @@ constitues a sensible compromise between model complexity and inference properti
 From a strictly behavioral point of view
 (e.g., considering $\MZ$ to express an expert's belief),
 taking $\PZ = [\nzl, \nzu] \times [\yzl, \yzu]$,
-is, as we mentioned in Sections~\ref{sec:pdc-sensitivity} and \ref{sec:resume}, a somewhat peculiar choice.
+is, as we mentioned in Sections~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}, a somewhat peculiar choice.
 It indicates*** that we assign the same interval for the main parameter $\yz$
 over a range of prior strengths.
 
@@ -199,7 +199,7 @@ It might be more reasonable to assume that the expert is able to give
 a more precise interval estimate for lower prior strengths,
 while being more cautious in his prior assignments for higher prior strengths
 by choosing a wider interval for $\yz$ at $\nzu$.%
-\footnote{As described in Section~\ref{sec:resume},
+\footnote{As described in Section~\ref{sec:ibbm-resume},
 such a choice could also lead to a more `tolerant' behaviour in case of \pdc.
 If, e.g., $\yzu(\nzl) < \yzu(\nzu)$ was chosen and $\ttau(\x) > \yzu(\nzu)$,
 the higher weight $\nzu$ for $\yzu(\nzu)$ in the update step
@@ -245,7 +245,10 @@ compares with \textcite{2005:whitcomb}, similar results, see Section~\ref{sec:al
 ***more studies for comparison with the model from \ref{sec:generalmodel} to be done,
 also with hierarchical models (Section~\ref{sec:hierarchical})?***
 
-***double role $\nz$, see Section~\ref{sec:resume}
+***e.g., new models for prior near-ignorance by Mangili-Benavoli 2013***
+
+
+***double role $\nz$, see Section~\ref{sec:ibbm-resume} here or in outlook???
 
 
 
